0023184: Bad face tessellation result Consider BSplineKnots to achieve better tessellation result Adding test cases for this fix